--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "apollo": "^2.31.1",
     "apollo-server-core": "^2.19.0",
     "apollo-server-express": "^2.19.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.15.0",
     "express": "^4.17.1",
     "graphql": "^14.7.0",
     "graphql-middleware": "^4.0.2",
     "nexus-plugin-prisma": "^0.23.1",
-    "server": "^1.0.31",
-    "tedis": "^0.1.12"
+    "server": "^1.0.31"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.6.1",
