--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nexus/schema": "^0.17.0",
     "@prisma/cli": "^2.10.2",
     "@prisma/client": "^2.10.2",
+    "@types/bcrypt": "^3.0.0",
     "@types/node": "^14.14.6",
     "apollo": "^2.31.1",
     "apollo-server-core": "^2.19.0",
@@ -31,6 +32,7 @@
     "express": "^4.17.1",
     "graphql": "^14.7.0",
     "graphql-middleware": "^4.0.2",
+    "graphql-shield": "^7.4.0",
     "nexus-plugin-prisma": "^0.23.1",
     "server": "^1.0.31"
   },
