--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "dotenv -e ./dotenv/.env -- ts-node-dev --no-notify --respawn --transpile-only src/server.ts",
+    "dev": "dotenv -e ./dotenv/.env -- ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema",
@@ -24,15 +24,17 @@
     "@types/bcrypt": "^3.0.0",
     "@types/node": "^14.14.6",
     "apollo": "^2.31.1",
+    "apollo-server": "^2.19.0",
     "apollo-server-core": "^2.19.0",
     "apollo-server-express": "^2.19.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.15.0",
     "express": "^4.17.1",
-    "graphql": "^14.7.0",
+    "graphql": "^15.4.0",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.4.0",
+    "jsonwebtoken": "^8.5.1",
     "nexus-plugin-prisma": "^0.23.1",
     "server": "^1.0.31"
   },
