--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "dotenv -e ./dotenv/.env -- ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
+    "dev": "dotenv -e ./dotenv/dev.env -- ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema",
@@ -20,7 +20,7 @@
   "dependencies": {
     "@nexus/schema": "^0.17.0",
     "@prisma/cli": "^2.10.2",
-    "@prisma/client": "^2.10.2",
+    "@prisma/client": "2.10.0",
     "@types/bcrypt": "^3.0.0",
     "@types/node": "^14.14.6",
     "apollo": "^2.31.1",
