--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "dotenv -e ./dotenv/dev.env -- ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --no-notify --respawn --transpile-only src/server.ts",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema",
@@ -22,13 +22,17 @@
     "@prisma/cli": "^2.10.2",
     "@prisma/client": "2.10.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.8",
     "@types/node": "^14.14.6",
     "apollo": "^2.31.1",
     "apollo-server": "^2.19.0",
     "apollo-server-core": "^2.19.0",
     "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
+    "dotenv-flow": "^3.2.0",
     "eslint-config-prettier": "^6.15.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
