--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ package-lock.json
 coverage/
 .eslintcache
 .DS_Store
+prisma/migrations/20201111205521-init/steps.json
+prisma/migrations/20201111205521-init/steps.json
+prisma/migrations/migrate.lock
