--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema",
     "studio": "prisma studio --experimental",
-    "migrate:save": "dotenv -e ./dotenv/prod.env -- prisma migrate save --experimental",
-    "migrate:up": "dotenv -e ./dotenv/prod.env -- prisma migrate up --experimental",
+    "migrate:save": "cross-env NODE_ENV=development prisma migrate save --experimental",
+    "migrate:up": "cross-env NODE_ENV=development prisma migrate up --experimental",
     "lint": "eslint src/**/**/*.ts && eslint tests/**/**/*.ts",
     "build": "npm -s run clean && npm -s run generate && tsc",
     "clean": "rm -rf dist"
@@ -18,20 +18,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nexus/schema": "^0.17.0",
+    "@nexus/schema": "^0.18.0",
     "@prisma/cli": "^2.10.2",
     "@prisma/client": "2.10.0",
-    "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.8",
-    "@types/node": "^14.14.6",
-    "apollo": "^2.31.1",
     "apollo-server": "^2.19.0",
     "apollo-server-core": "^2.19.0",
     "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
     "dotenv-flow": "^3.2.0",
     "eslint-config-prettier": "^6.15.0",
     "express": "^4.17.1",
@@ -43,8 +38,12 @@
     "server": "^1.0.31"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.8",
+    "@types/node": "^14.14.6",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
